--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,21 @@ body{
   font-family: 'Work Sans', sans-serif;
   font-weight: 400;
 }
+
+button{
+  font-family: 'Work Sans', sans-serif;
+  display: grid;
+  grid-auto-flow: column;
+  vertical-align: middle;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+svg{
+  align-items:center;
+  vertical-align: middle;
+}
+
 .App {
   text-align: center;
 }
