--- a/src/componentes/miolo/Bebidas.css
+++ b/src/componentes/miolo/Bebidas.css
@@ -13,8 +13,8 @@
     cursor: pointer;
 }
 
-.menu_comidas{
-    width:60%;
+.menu_bebidas{
+    width:80%;
     display: flex;
     flex-direction: row;
     justify-content: center;
