--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url(https://www.marciomedeirosdesign.com.br/nucleoweb/cardapio/imgs/bg.jpg);
+  background-repeat: repeat;
 }
 
 code {
